[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-pd-offload-bench"
version = "0.1.0"
description = "Unified KV cache/offload benchmark orchestration for SGLang PD separation scenarios"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["bench*"]
