[package]
name = "sglang-scheduler"
version = "0.1.0"
edition = "2024"
description = "Rust port of SGLang's CPU-only scheduler (scheduler_cpu.py). Drives GPU TpWorkerServer processes over msgpack ZMQ IPC."

# Importable from Python like the sibling sglang-frontend / sglang-grpc crates.
[lib]
name = "sglang_scheduler"
crate-type = ["cdylib", "rlib"]

# Standalone CLI for running the scheduler without Python.
[[bin]]
name = "sglang-scheduler"
path = "src/main.rs"

[dependencies]
# Python bindings — match sibling crate versions.
pyo3 = { version = "0.28.2", features = ["extension-module"] }

# Wire transport.
zmq = "0.10"

# msgpack — ``rmp-serde`` gives us serde-compatible (de)serialization that
# round-trips with Python's ``msgspec`` when our structs match the schema.
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }

# Async + utilities.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }

# Logging, errors, CLI.
log = "0.4"
env_logger = "0.11"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
